LPS-38143 - Centralizing form field selectors to fix alignment issues with inline fields

--- a/portal-web/docroot/html/css/portal/forms.css
+++ b/portal-web/docroot/html/css/portal/forms.css
@@ -159,25 +159,10 @@
 
 @include respond-to(phone, tablet) {
 	.aui {
-		input[type="color"],
-		input[type="date"],
-		input[type="datetime"],
-		input[type="datetime-local"],
-		input[type="email"],
-		input[type="month"],
-		input[type="number"],
-		input[type="password"],
-		input[type="search"],
-		input[type="tel"],
-		input[type="text"],
-		input[type="time"],
-		input[type="url"],
-		input[type="week"],
+		#{$form_text_fields},
 		select,
-		textarea,
 		.input-prepend .add-on,
-		.navbar-search .search-query,
-		.uneditable-input {
+		.navbar-search .search-query {
 			font-size: 18px;
 			height: auto;
 			line-height: normal;
